[package]
name = "memcache-async"
version = "0.4.1"
authors = ["Marek Vavruša <marek@vavrusa.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A no-frills async memcached client for Rust."
keywords = ["memcache", "memcached", "cache", "database", "async"]

[dependencies]
futures = { version = "0.3" }
