[package]
name = "memcache-async"
version = "0.7.0"
authors = ["Marek Vavruša <marek@vavrusa.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A no-frills async memcached client for Rust."
keywords = ["memcache", "memcached", "cache", "database", "async"]
repository = "https://github.com/vavrusa/memcache-async"
documentation = "https://docs.rs/memcache-async"
homepage = "https://github.com/vavrusa/memcache-async"

[dependencies]
futures = { version = "0.3" }


[dev-dependencies]
tokio = {version = "1.20.0", features = ["full"]}
