[package]
name = "memcache-async"
version = "0.10.0"
authors = ["Marek Vavruša <marek@vavrusa.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A no-frills async memcached client for Rust."
keywords = ["memcache", "memcached", "cache", "database", "async"]
repository = "https://github.com/vavrusa/memcache-async"
documentation = "https://docs.rs/memcache-async"
homepage = "https://github.com/vavrusa/memcache-async"

[dependencies]
futures = { version = "0.3" }
tokio = { version = "1.37", features = ["io-util"] }

[features]
default = ["with-futures"]
with-futures = []
with-tokio = []
