[package]
name = "memcache-async-examples"
version = "0.2.1"
authors = ["Marek Vavruša <marek@vavrusa.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A no-frills async memcached client for Rust."
keywords = ["memcache", "memcached", "cache", "database", "async"]
publish = false

[[bin]]
name = "tcp-simple"
path = "tcp-simple.rs"

[[bin]]
name = "tcp-compat"
path = "tcp-compat.rs"

[dependencies]
memcache-async = { path = "../" }
futures-preview = { version = "0.3.0-alpha.16", features = ["compat", "io-compat"] }
tokio = "0.1"